<resources>
    <string name="app_name">SportEco</string>
    <string name="username_hint">Username or Email </string>
    <string name="pwd_hint">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="evaluate">Evaluate</string>
    <string name="attendance">Attendance</string>
    <string name="players">Players</string>
    <string name="vod">VOD</string>
    <string name="batch">Batch</string>
    <string name="sessions">Sessions</string>
    <string name="schedule_calendar">Schedule Calendar</string>
    <string name="view_all_txt">View All</string>
    <string name="todo_list">Todo List</string>
    <string name="week">Week</string>
    <string name="todays">Today\'s</string>
    <string name="description">Description</string>
    <string name="focus_pts">Focus Points</string>
    <string name="equip_reqd">Equipments Required</string>
    <string name="done">Done</string>
    <string name="comments">Comments</string>
    <string name="group_name">Group Name</string>
    <string name="drills">Drills</string>
</resources>
