<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.fragments.HomeFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?android:attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/burgerIconIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_hamburger" />

            <ImageView
                android:id="@+id/logoIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/burgerIconIV"
                android:src="@drawable/ic_sporteco_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/logoIV"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/notifsIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_notification" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginBottom="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f8f8f8"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/actionsRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_red"
                android:padding="5dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_red">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:text="@string/schedule_calendar"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/viewAllSchedulesTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:text="@string/view_all_txt"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </RelativeLayout>

            <com.github.jhonnyx2012.horizontalpicker.HorizontalPicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_red" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:padding="10dp"
                    android:text="@string/sessions"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    android:layout_alignParentStart="true"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_alignParentRight="true">

                    <TextView
                        android:id="@+id/todaysTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/todays"
                        android:textColor="@color/app_red"
                        android:textSize="11sp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true" />

                    <TextView
                        android:id="@+id/weekTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/todaysTV"
                        android:padding="10dp"
                        android:text="@string/week"
                        android:textColor="@color/app_red"
                        android:textSize="11sp"
                        android:layout_centerVertical="true" />

                </LinearLayout>

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/sessionsRV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent" />

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:background="@color/white">

               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_alignParentLeft="true"
                       android:padding="10dp"
                       android:text="@string/todo_list"
                       android:textColor="@color/text_color"
                       android:textSize="14sp"
                       android:textStyle="bold"/>

                   <TextView
                       android:id="@+id/viewAllTodosTV"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_alignParentLeft="true"
                       android:padding="10dp"
                       android:text="@string/view_all_txt"
                       android:textColor="@color/app_red"
                       android:textSize="11sp"
                       android:gravity="end"
                       android:layout_alignParentRight="true"/>

               </RelativeLayout>

               <android.support.v7.widget.RecyclerView
                   android:id="@+id/todosRV"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="10dp"
                   android:layout_marginRight="10dp"
                   android:background="@android:color/white" />

           </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>