<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.dialogs.DrillsDetailsFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back_button"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/nameDrillTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Session 1"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_toRightOf="@id/backIV"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:fillViewport="true"
        android:layout_below="@id/toolbar"
        android:layout_above="@+id/actionsLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/drillCoverIV"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/app_logo_resized"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="22sp"
                    android:textColor="@color/text_color"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_gray"
                    android:layout_marginTop="3dp"/>

                <TextView
                    android:id="@+id/drillDescTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Lorem ipsum dolor sit amet, consecteteur adipscing elit, sed diam nonummy nibh euismond tincidunt ut laoreet dolor magna aliquam erat voluptat"
                    android:textSize="18sp"
                    android:minHeight="60dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/focus_pts"
                        android:textSize="22sp"
                        android:textColor="@color/text_color"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/divider_gray"
                        android:layout_marginTop="3dp"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/drillFocusRV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/equip_reqd"
                        android:textSize="22sp"
                        android:textColor="@color/text_color"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/divider_gray"
                        android:layout_marginTop="3dp"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/drillEquipmentsRV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/drillActionsLayout"
        android:layout_width="wrap_content"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:weightSum="2"
        android:layout_margin="4dp"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:id="@+id/evaluateDrillBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/session_btn_bkg"
            android:layout_weight="1"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/evalTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Evaluate"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_white"
                android:layout_toRightOf="@id/evalTV"
                android:layout_marginLeft="5dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/startDrillBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/session_btn_bkg"
            android:layout_weight="1"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginLeft="15dp">

            <TextView
                android:id="@+id/startTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_play_white"
                android:layout_toRightOf="@id/startTV"
                android:layout_marginLeft="5dp"/>

        </RelativeLayout>



    </LinearLayout>

</RelativeLayout>